Feat/brush logic overhaul (#82)
* Removed clampY, started seperating Performer and Brush logic

* Disabled Rot2D, Rot2Dvert and Rot3D.

* Added operations

* Fixed BlockWrapper clone method

* Updated performers

* Split up VoxelLocation into immutable BaseLocation and mutable VoxelLocation (#93)

* Rename some methods, Improve code a bit in a few places

* Improved PlayerSnipeEvent

* Improved TreeSnipeBrush - now actually adds all effected locations to the list of operation, logic isn't ideal, but it works for now

* Added Kotlin support

* Bump version

* Correct kotlin jvm targets

* Add isInWorldHeight Check

* Moved kotlin gradle settings into common fille (voxel-core.gradle.kts)

* remove kotlin implementation from spigot module, this is now managed globally

Co-authored-by: Lennart99 <le.le@live.nl>